# KV-

./: .dockerignore  .gitignore  2026_07_02_KVServerLog  Dockerfile  README.md  build.sh  docker-compose.yml  kvserver  makefile
.github/workflows/: ci.yml
configs/: cluster-node1.yaml  cluster-node2.yaml  cluster-node3.yaml  cluster-node4.yaml  cluster-node5.yaml  kvserver.yaml  wal-test.yaml
data/node-1/: kv.wal
data/node-2/: kv.wal
data/node-3/: kv.wal
docs/: PROJECT_STRUCTURE.md
src/: main.cpp
src/app/: kv_server.cpp  kv_server.h
src/cluster/: consistent_hash.cpp  consistent_hash.h  node.h  router.cpp  router.h
src/config/: config_loader.cpp  config_loader.h  server_config.h  yaml_parser.cpp  yaml_parser.h
src/log/: block_queue.h  log.cpp  log.h
src/net/: thread_pool.cpp  thread_pool.h
src/protocol/: kv_protocol.cpp  kv_protocol.h  request.h  response.h
src/storage/: kv_store.h  memory_store.cpp  memory_store.h  persistent_memory_store.cpp  persistent_memory_store.h  snapshot.cpp  snapshot.h  wal.cpp  wal.h
tests/: CMakeLists.txt
tests/integration/: raft_fault_consistency.sh  test_kv_server_basic.cpp
tests/unit/: test_block_queue.cpp  test_consistent_hash.cpp  test_kv_protocol.cpp  test_memory_store.cpp  test_wal.cpp
tools/: bench.cpp  dashboard_server.py
